# Phase-Auto-Updater

./: .gitignore  Cargo.toml  README.md  build.rs  dev-notes.md
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
installer/windows/: License.rtf  PhaseAutoUpdater.wxs  SetupBundle.wxs
scripts/: build-macos.sh  build-msi.ps1  build-windows.ps1  msvc-cl-x64.cmd  msvc-env-x64.cmd  msvc-lib-x64.cmd  msvc-link-x64.cmd
src/: companion.rs  detector.rs  diagnostics.rs  main.rs  motion.rs  setup.rs  verification.rs  video_reference.rs
