[package]
name = "phase-updater"
version = "0.1.6"
edition = "2024"
description = "Native updater for the Phase Animator Roblox Studio plugin."
license = "MIT"
publish = false

[[bin]]
name = "phase-tool"
path = "src/main.rs"

[[bin]]
name = "phase-setup"
path = "src/setup.rs"
required-features = ["embed-msi"]

[features]
embed-msi = []

[dependencies]
dirs = "5.0"
eframe = { version = "0.27", default-features = true }
egui_extras = "0.27"
image = { version = "0.24", default-features = false, features = ["png"] }
notify-rust = "4.11"
open = "5.3"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tungstenite = { version = "0.24", features = ["native-tls"] }
ureq = { version = "2.12", default-features = false, features = ["json", "native-tls"] }
uuid = { version = "1.8", features = ["v4"] }
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
winresource = "0.1"
